<resources>
    <string name="app_name">PasswordManger</string>
    <string name="name">Name</string>
    <string name="username_email">Username/Email</string>
    <string name="password">Password</string>
    <string name="share_with">Share With</string>
    <string name="selected_user_to_share">Selected user to share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="view">View</string>
    <string name="description">Description</string>
    <string name="copy_password">Copy Password</string>
    <string name="select_users">Select Users</string>
    <string name="close">close</string>
    <string name="check_user_list">check user list</string>
    <string name="added_by_you">Added by you</string>
    <string name="shared_with_you">Shared with you</string>
    <string name="add_account">Add account</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="delete_confirmation_message">Are you sure you want to delete account?</string>
    <string name="password_copied">Password copied to clipboard</string>
    <string name="done">Done</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="please_enter_description">Please enter description</string>
    <string name="no_data_found">No Data Found</string>
    <string name="no_network_message">Please connect to the internet and try again.</string>
</resources>